--- a/william_workspace/compareFiles.ipynb
+++ b/william_workspace/compareFiles.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing database...\n"
+     ]
+    }
+   ],
    "source": [
     "import os, json\n",
     "from letta import create_client \n",
@@ -24,19 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test1\n",
-      "test2\n",
-      "doct2.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import letta.data_sources\n",
     "import letta.data_sources.connectors\n",
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,24 +73,30 @@
     "\n",
     "\n",
     "\n",
-    "def sort_FS(self,):\n",
+    "def sort_FS(self, mode:str):\n",
     "    \"\"\"\n",
     "    This tool sorts the user's file system.\n",
     "    If asked to sort or to organize the file system, call this function.\n",
     "    Tell the user the return and results of the function call.\n",
+    "    Query the user for the mode (valid modes are: content, extension, name, or date), before calling this function. \n",
+    "\n",
     "\n",
     "    Args: \n",
+    "        mode (str) : This is the mode in which the sorting should be done. Options are: content, extension, name, or date. This is chosen by the user.\n",
+    "\n",
     "    Returns: \n",
     "        fileSort (str) : This is the new organization of the file system users requested\n",
     "    \"\"\"\n",
     "    #create another client to ask\n",
     "    from letta import create_client \n",
     "    from letta import EmbeddingConfig, LLMConfig\n",
-    "    import json, os\n",
+    "    import json, os, re\n",
     "    \n",
     "    client = create_client()\n",
     "    client.set_default_embedding_config(EmbeddingConfig.default_config(model_name=\"letta\"))\n",
     "    client.set_default_llm_config(LLMConfig.default_config(model_name=\"letta\"))\n",
+    "\n",
+    "\n",
     "\n",
     "    #get json data\n",
     "    #file = open('FileSystemData.json') #NOTE: hardCoded\n",
@@ -102,28 +106,55 @@
     "\n",
     "    #create message to send to different agent\n",
     "    #NOTE: 1 layer simple sort, based on name\n",
-    "    #file_keys = fileData['TestDirectory']['children'].keys() #NOTE: hardCoded\n",
-    "    file_keys = fileData.keys() #NOTE: hardCoded\n",
-    "    message = \"Using the template and given the following items, sort the items into the template based on commonalities. Return nothing else:\\nTemplate:\\n[category 1]{item 1, item2, ...}\\n[category 2]{item 1, item2, ...}\\n...\\nItems:\"\n",
-    "    for k in file_keys:\n",
-    "        message = message + \"\\n\" + k\n",
-    "    \n",
-    "    # agentName = \"helperAgent\"\n",
-    "    \n",
-    "    # agent_1 = client.create_agent(\n",
-    "    #     name=agentName,\n",
-    "    #     tools=[x.name for x in client.list_tools()]\n",
-    "    # )\n",
+    "    file_keys = fileData.keys()\n",
     "\n",
-    "    # helperAgent = client.get_agent(\n",
-    "    #     agent_id=\"agent-7b9b10c7-d1cd-4367-be94-e67ab3817aab\" #hardCoded #OptimisticLion\n",
-    "    # )\n",
+    "    \n",
+    "    template = \"\\nTemplate:\\n[group 1]{item 1, item2, ...}\\n[group 2]{item 3, item 4, ...}\\n...\\nItems:\"\n",
     "\n",
+    "    enforceSingle = \"If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. Return only the output template and nothing else:\"\n",
+    "    \n",
+    "    if mode == 'name':\n",
+    "        prompt = f\"Using the template and given the following files, group the files into the template based on the commonalities in the topic, semantics, or meanings of the names. Ignore the file extension or file type\"\n",
+    "\n",
+    "        message = prompt + enforceSingle + template\n",
+    "        for k in file_keys:\n",
+    "            message = message + \"\\n\" + k\n",
+    "\n",
+    "    elif mode == 'extension':\n",
+    "        prompt = f\"Using the template and given the following files, group the files into the template based on the commonalities of ONLY on the {mode}s of the file, and not on the name.\"\n",
+    "\n",
+    "        message = prompt + enforceSingle + template\n",
+    "        for k in file_keys:\n",
+    "            message = message + \"\\n\" + k\n",
+    "    elif mode  == 'content':\n",
+    "        #NOTE: when we say content, we are also refereing to file summary\n",
+    "        for k in file_keys:\n",
+    "            try:\n",
+    "                message =  message + '\\n file: \"' + k + '\" content: \"' + fileData[k]['summary'] + '\"'\n",
+    "            except KeyError:\n",
+    "                continue \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    print(f'Testing Output: {message}')\n",
+    "\n",
+    "    #NOTE: for easier testing, try to start fresh so we know effect of prompting\n",
+    "    try:\n",
+    "        agentState = client.create_agent('background_agent')\n",
+    "    except ValueError:\n",
+    "        agentID = client.get_agent_id('background_agent')\n",
+    "        client.delete_agent(agentID)\n",
+    "        agentState = client.create_agent('background_agent')\n",
+    "    \n",
+    "    \n",
     "    answer = client.send_message(\n",
     "        message=message,\n",
     "        role='user',\n",
-    "        agent_id=\"agent-7b9b10c7-d1cd-4367-be94-e67ab3817aab\" #hardCoded #OptimisticLion,\n",
+    "        agent_id=agentState.id\n",
     "    )\n",
+    "\n",
+    "    \n",
+    "\n",
     "    answer = answer.messages[1].function_call.arguments\n",
     "    answer = json.loads(answer)\n",
     "    answer = json.dumps(answer['message'])\n",
@@ -141,34 +172,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MY_ANSWER \"[Animals]{fish.txt, bird.txt, dog.txt}\\n[Fruits]{apple.txt, lemon.txt}\\n[Miscellaneous]{shoe.txt, tv.txt}\"\n"
+      "Testing Output: Using the template and given the following files, group the files into the template based on the commonalities of ONLY on the extensions of the file, and not on the name.If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. Return only the output template and nothing else:\n",
+      "Template:\n",
+      "[group 1]{item 1, item2, ...}\n",
+      "[group 2]{item 3, item 4, ...}\n",
+      "...\n",
+      "Items:\n",
+      "shoe.txt\n",
+      "tv.txt\n",
+      "fish.txt\n",
+      "bird.txt\n",
+      "apple.txt\n",
+      "dog.txt\n",
+      "lemon.txt\n",
+      "fish.pdf\n",
+      "apple.pdf\n",
+      "lol.dmg\n",
+      "MY_ANSWER \"Here are the groups based on the file extensions:\\n[group 1]{shoe.txt, tv.txt, fish.txt, bird.txt, apple.txt, dog.txt, lemon.txt}\\n[group 2]{fish.pdf, apple.pdf}\\n[group 3]{lol.dmg}\"\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'\"[Animals]{fish.txt, bird.txt, dog.txt}\\\\n[Fruits]{apple.txt, lemon.txt}\\\\n[Miscellaneous]{shoe.txt, tv.txt}\"'"
+       "'\"Here are the groups based on the file extensions:\\\\n[group 1]{shoe.txt, tv.txt, fish.txt, bird.txt, apple.txt, dog.txt, lemon.txt}\\\\n[group 2]{fish.pdf, apple.pdf}\\\\n[group 3]{lol.dmg}\"'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sort_FS('_')"
+    "sort_FS('_', 'extension')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('dataTable3.json') #NOTE: hardCoded\n",
+    "fileData = json.load(file)\n",
+    "#fileDataS = json.dumps(fileData)\n",
+    "\n",
+    "#create message to send to different agent\n",
+    "#NOTE: 1 layer simple sort, based on name\n",
+    "file_keys = fileData.keys()\n",
+    "message = ''\n",
+    "for k in file_keys:\n",
+    "    try:\n",
+    "        message =  message + '\\n file: \"' + k + '\" content: \"' + fileData[k]['summary'] + '\"'\n",
+    "    except KeyError:\n",
+    "        continue\n",
+    "print(message)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
