--- a/william_workspace/compareFiles.ipynb
+++ b/william_workspace/compareFiles.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing database...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, json\n",
     "from letta import create_client \n",
@@ -62,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,24 +62,25 @@
     "from letta import create_client \n",
     "from letta import EmbeddingConfig, LLMConfig\n",
     "import letta\n",
+    "from letta import AgentState\n",
     "\n",
     "\n",
-    "\n",
-    "def sort_FS(self, mode:str):\n",
+    "def sort_FS(self, mode: str):\n",
     "    \"\"\"\n",
     "    This tool sorts the user's file system.\n",
     "    If asked to sort or to organize the file system, call this function.\n",
     "    Tell the user the return and results of the function call.\n",
-    "    Query the user for the mode (valid modes are: content, extension, name, or date), before calling this function. \n",
     "\n",
     "\n",
     "    Args: \n",
-    "        mode (str) : This is the mode in which the sorting should be done. Options are: content, extension, name, or date. This is chosen by the user.\n",
+    "        mode (str): This is the mode or method in which the user wants the sorting to be done. \n",
     "\n",
     "    Returns: \n",
-    "        fileSort (str) : This is the new organization of the file system users requested\n",
+    "        fileSort (str): This is the new organization of the file system users requested\n",
     "    \"\"\"\n",
     "    #create another client to ask\n",
+    "    #Options are: content, extension, name, or date.\n",
+    "    # Query the user for the mode (valid modes are: content, extension, name, or date), before calling this function. \n",
     "    from letta import create_client \n",
     "    from letta import EmbeddingConfig, LLMConfig\n",
     "    import json, os, re\n",
@@ -128,9 +121,14 @@
     "            message = message + \"\\n\" + k\n",
     "    elif mode  == 'content':\n",
     "        #NOTE: when we say content, we are also refereing to file summary\n",
+    "        prompt = f\"Using the template and given the following files, group the files into the template based on the commonalities of ONLY on the summary of the file.\"\n",
+    "\n",
+    "        message = prompt + enforceSingle +template\n",
     "        for k in file_keys:\n",
+    "            print(k)\n",
     "            try:\n",
     "                message =  message + '\\n file: \"' + k + '\" content: \"' + fileData[k]['summary'] + '\"'\n",
+    "                #TODO: maybe change content to summary \n",
     "            except KeyError:\n",
     "                continue \n",
     "    \n",
@@ -172,19 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Output: Using the template and given the following files, group the files into the template based on the commonalities of ONLY on the extensions of the file, and not on the name.If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. Return only the output template and nothing else:\n",
-      "Template:\n",
-      "[group 1]{item 1, item2, ...}\n",
-      "[group 2]{item 3, item 4, ...}\n",
-      "...\n",
-      "Items:\n",
       "shoe.txt\n",
       "tv.txt\n",
       "fish.txt\n",
@@ -195,22 +187,35 @@
       "fish.pdf\n",
       "apple.pdf\n",
       "lol.dmg\n",
-      "MY_ANSWER \"Here are the groups based on the file extensions:\\n[group 1]{shoe.txt, tv.txt, fish.txt, bird.txt, apple.txt, dog.txt, lemon.txt}\\n[group 2]{fish.pdf, apple.pdf}\\n[group 3]{lol.dmg}\"\n"
+      "Testing Output: Using the template and given the following files, group the files into the template based on the commonalities of ONLY on the summary of the file.If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. Return only the output template and nothing else:\n",
+      "Template:\n",
+      "[group 1]{item 1, item2, ...}\n",
+      "[group 2]{item 3, item 4, ...}\n",
+      "...\n",
+      "Items:\n",
+      " file: \"shoe.txt\" content: \"the manufacturing process for shoes\"\n",
+      " file: \"tv.txt\" content: \"the manufacturing process for tv. \"\n",
+      " file: \"fish.txt\" content: \"the life cycle for process for fishes.\"\n",
+      " file: \"bird.txt\" content: \"the life cycle for process for birds\"\n",
+      " file: \"apple.txt\" content: \"cooking recipies for apples\"\n",
+      " file: \"dog.txt\" content: \"the life cycle for process for dogs\"\n",
+      " file: \"lemon.txt\" content: \"how to grow lemons\"\n",
+      "MY_ANSWER \"[Manufacturing Process Group]{shoe.txt, tv.txt}\\n[Life Cycle Process Group]{fish.txt, bird.txt, dog.txt}\\n[Cooking/How to Grow Group]{apple.txt, lemon.txt}\"\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'\"Here are the groups based on the file extensions:\\\\n[group 1]{shoe.txt, tv.txt, fish.txt, bird.txt, apple.txt, dog.txt, lemon.txt}\\\\n[group 2]{fish.pdf, apple.pdf}\\\\n[group 3]{lol.dmg}\"'"
+       "'\"[Manufacturing Process Group]{shoe.txt, tv.txt}\\\\n[Life Cycle Process Group]{fish.txt, bird.txt, dog.txt}\\\\n[Cooking/How to Grow Group]{apple.txt, lemon.txt}\"'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sort_FS('_', 'extension')"
+    "sort_FS('_', 'content')"
    ]
   },
   {
@@ -238,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
