finished sorting/moving files

--- a/william_workspace/compareFiles.ipynb
+++ b/william_workspace/compareFiles.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,6 @@
     "    client.set_default_embedding_config(EmbeddingConfig.default_config(model_name=\"letta\"))\n",
     "    client.set_default_llm_config(LLMConfig.default_config(model_name=\"letta\"))\n",
     "\n",
-    "\n",
-    "\n",
     "    #get json data\n",
     "    #file = open('FileSystemData.json') #NOTE: hardCoded\n",
     "    file = open('dataTable3.json') #NOTE: hardCoded\n",
@@ -104,7 +102,7 @@
     "    \n",
     "    template = \"\\nTemplate:\\n[group 1]{item 1, item2, ...}\\n[group 2]{item 3, item 4, ...}\\n...\\nItems:\"\n",
     "\n",
-    "    enforceSingle = \"If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. Return only the output template and nothing else:\"\n",
+    "    enforceSingle = \"If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. DO NOT CHANGE THE FILE NAMES. Return only the output template and nothing else:\"\n",
     "    \n",
     "    if mode == 'name':\n",
     "        prompt = f\"Using the template and given the following files, group the files into the template based on the commonalities in the topic, semantics, or meanings of the names. Ignore the file extension or file type\"\n",
@@ -125,7 +123,7 @@
     "\n",
     "        message = prompt + enforceSingle +template\n",
     "        for k in file_keys:\n",
-    "            print(k)\n",
+    "            # print(k)\n",
     "            try:\n",
     "                message =  message + '\\n file: \"' + k + '\" content: \"' + fileData[k]['summary'] + '\"'\n",
     "                #TODO: maybe change content to summary \n",
@@ -159,10 +157,74 @@
     "    print(\"MY_ANSWER\", answer)\n",
     "\n",
     "    #self.interface.assistant_message(answer)  # , msg_obj=self._messages[-1])\n",
-    "\n",
     "    outputFile = open(\"newFileSystem.txt\", 'w')\n",
-    "    outputFile.write(answer)\n",
+    "    outputFile.write(answer) #NOTE: Store background agent output\n",
+    "\n",
+    "    #----ParsingGPT_FS----\n",
+    "    raw_folders = re.findall(r'(\\[[\\w\\s\\-\\,\\.\\\\\\/\\(\\)]+\\])', answer)\n",
+    "    # print(raw_folders)\n",
+    "\n",
+    "    raw_files = re.findall(r'\\{[\\w\\s\\-\\,\\.\\\\\\/\\(\\)]+\\}', answer)\n",
+    "    # print(raw_files)\n",
+    "\n",
+    "    #split and clean files\n",
+    "    files = []\n",
+    "    for f in raw_files:\n",
+    "        f = re.sub(r'[\\{\\}]', '', f)\n",
+    "        files.append(re.split(', ', f))\n",
+    "        # print(files)\n",
+    "\n",
+    "    print('Files:  ', files)\n",
+    "\n",
+    "    #clean folders\n",
+    "    folders = []\n",
+    "    for f in raw_folders:\n",
+    "        f = re.sub(r'[\\[\\]]', '', f)\n",
+    "        f = re.sub(r' ', '_', f)\n",
+    "        folders.append(re.split(', ', f)[0])\n",
+    "\n",
+    "    print('Folders:  ', folders)\n",
+    "\n",
+    "    #generate json file table\n",
+    "    fs_table = {}\n",
+    "    dir_root = 'TestDirectory3' #NOTE: Hard Coded\n",
+    "    for folder_i in range(len(folders)):\n",
+    "        for file_i in range(len(files[folder_i])):\n",
+    "            old_path = fileData[files[folder_i][file_i]]['path']\n",
+    "\n",
+    "            fs_table[files[folder_i][file_i]] = {\n",
+    "                \"type\" : \"file\",\n",
+    "                \"new_path\" : f\"{dir_root}/{folders[folder_i]}\",\n",
+    "                \"old_path\" : old_path\n",
+    "            }\n",
+    "        \n",
+    "    print(json.dumps(fs_table, indent=4))\n",
+    "    #---------------------END\n",
+    "\n",
+    "\n",
+    "    #----CREATE_NEW_FS----\n",
+    "    import shutil\n",
+    "    for fileName in fs_table.keys():\n",
+    "        print('MOVING: ', fileName)\n",
+    "        try:\n",
+    "            os.mkdir(fs_table[fileName]['new_path'])\n",
+    "        except FileExistsError: \n",
+    "            continue\n",
+    "        finally:\n",
+    "            shutil.move(fs_table[fileName]['old_path'] + \"/\" + fileName, fs_table[fileName]['new_path'] + \"/\" + fileName)\n",
+    "    #---------------------END\n",
+    "\n",
+    "    #----DELETE_OLD_FOLDERS----\n",
+    "    for fileName in fs_table.keys():\n",
+    "        try:\n",
+    "            old_path = fs_table[fileName]['old_path']\n",
+    "            if old_path != dir_root:\n",
+    "                os.rmdir(old_path)\n",
+    "        except FileExistsError: \n",
+    "            continue\n",
+    "    #--------------------------END\n",
     "    \n",
+    "    #NOTE: return background agent output to user\n",
     "    return answer\n",
     "\n",
     "sort_FS_tool = client.create_tool(sort_FS)\n"
@@ -170,24 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shoe.txt\n",
-      "tv.txt\n",
-      "fish.txt\n",
-      "bird.txt\n",
-      "apple.txt\n",
-      "dog.txt\n",
-      "lemon.txt\n",
-      "fish.pdf\n",
-      "apple.pdf\n",
-      "lol.dmg\n",
-      "Testing Output: Using the template and given the following files, group the files into the template based on the commonalities of ONLY on the summary of the file.If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. Return only the output template and nothing else:\n",
+      "Testing Output: Using the template and given the following files, group the files into the template based on the commonalities of ONLY on the summary of the file.If an item has already be grouped, do not group it again. Thus, for each item listed, it should only appear once amoungst all groups. DO NOT CHANGE THE FILE NAMES. Return only the output template and nothing else:\n",
       "Template:\n",
       "[group 1]{item 1, item2, ...}\n",
       "[group 2]{item 3, item 4, ...}\n",
@@ -200,18 +252,66 @@
       " file: \"apple.txt\" content: \"cooking recipies for apples\"\n",
       " file: \"dog.txt\" content: \"the life cycle for process for dogs\"\n",
       " file: \"lemon.txt\" content: \"how to grow lemons\"\n",
-      "MY_ANSWER \"[Manufacturing Process Group]{shoe.txt, tv.txt}\\n[Life Cycle Process Group]{fish.txt, bird.txt, dog.txt}\\n[Cooking/How to Grow Group]{apple.txt, lemon.txt}\"\n"
+      "MY_ANSWER \"[Manufacturing Processes]{shoe.txt, tv.txt}\\n[Life Cycles]{fish.txt, bird.txt, dog.txt}\\n[Food Related]{apple.txt, lemon.txt}\"\n",
+      "Files:   [['shoe.txt', 'tv.txt'], ['fish.txt', 'bird.txt', 'dog.txt'], ['apple.txt', 'lemon.txt']]\n",
+      "Folders:   ['Manufacturing_Processes', 'Life_Cycles', 'Food_Related']\n",
+      "{\n",
+      "    \"shoe.txt\": {\n",
+      "        \"type\": \"file\",\n",
+      "        \"new_path\": \"TestDirectory3/Manufacturing_Processes\",\n",
+      "        \"old_path\": \"TestDirectory3\"\n",
+      "    },\n",
+      "    \"tv.txt\": {\n",
+      "        \"type\": \"file\",\n",
+      "        \"new_path\": \"TestDirectory3/Manufacturing_Processes\",\n",
+      "        \"old_path\": \"TestDirectory3\"\n",
+      "    },\n",
+      "    \"fish.txt\": {\n",
+      "        \"type\": \"file\",\n",
+      "        \"new_path\": \"TestDirectory3/Life_Cycles\",\n",
+      "        \"old_path\": \"TestDirectory3\"\n",
+      "    },\n",
+      "    \"bird.txt\": {\n",
+      "        \"type\": \"file\",\n",
+      "        \"new_path\": \"TestDirectory3/Life_Cycles\",\n",
+      "        \"old_path\": \"TestDirectory3/test1\"\n",
+      "    },\n",
+      "    \"dog.txt\": {\n",
+      "        \"type\": \"file\",\n",
+      "        \"new_path\": \"TestDirectory3/Life_Cycles\",\n",
+      "        \"old_path\": \"TestDirectory3/test2\"\n",
+      "    },\n",
+      "    \"apple.txt\": {\n",
+      "        \"type\": \"file\",\n",
+      "        \"new_path\": \"TestDirectory3/Food_Related\",\n",
+      "        \"old_path\": \"TestDirectory3/test1\"\n",
+      "    },\n",
+      "    \"lemon.txt\": {\n",
+      "        \"type\": \"file\",\n",
+      "        \"new_path\": \"TestDirectory3/Food_Related\",\n",
+      "        \"old_path\": \"TestDirectory3/test2\"\n",
+      "    }\n",
+      "}\n",
+      "MOVING:  shoe.txt\n",
+      "MOVING:  tv.txt\n",
+      "MOVING:  fish.txt\n",
+      "MOVING:  bird.txt\n",
+      "MOVING:  dog.txt\n",
+      "MOVING:  apple.txt\n",
+      "MOVING:  lemon.txt\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "'\"[Manufacturing Process Group]{shoe.txt, tv.txt}\\\\n[Life Cycle Process Group]{fish.txt, bird.txt, dog.txt}\\\\n[Cooking/How to Grow Group]{apple.txt, lemon.txt}\"'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'TestDirectory3/test1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[97], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msort_FS\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcontent\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[96], line 162\u001b[0m, in \u001b[0;36msort_FS\u001b[0;34m(self, mode)\u001b[0m\n\u001b[1;32m    160\u001b[0m     old_path \u001b[38;5;241m=\u001b[39m fs_table[fileName][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mold_path\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m    161\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m old_path \u001b[38;5;241m!=\u001b[39m dir_root:\n\u001b[0;32m--> 162\u001b[0m         \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrmdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mold_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    163\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m: \n\u001b[1;32m    164\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'TestDirectory3/test1'"
+     ]
     }
    ],
    "source": [
