change destination file write

--- a/william_workspace/compareFiles.ipynb
+++ b/william_workspace/compareFiles.ipynb
@@ -446,7 +446,7 @@
     "    fileSystem = json.dumps(fileSystem, indent=4)\n",
     "    print(fileSystem)\n",
     "\n",
-    "    FileSystemData = open(\"FileSystemData.json\", \"w\")\n",
+    "    FileSystemData = open(\"new_dir_org.json\", \"w\")\n",
     "    FileSystemData.write(fileSystem)\n",
     "    #-------------------------------END\n",
     "\n",
@@ -645,7 +645,7 @@
     "    fileSystem = json.dumps(fileSystem, indent=4)\n",
     "    print(fileSystem)\n",
     "\n",
-    "    FileSystemData = open(\"FileSystemData.json\", \"w\")\n",
+    "    FileSystemData = open(\"new_dir_org.json\", \"w\")\n",
     "    FileSystemData.write(fileSystem)\n",
     "    #-------------------------------END\n",
     "    \n",
@@ -849,7 +849,7 @@
     "    fileSystem = json.dumps(fileSystem, indent=4)\n",
     "    print(fileSystem)\n",
     "\n",
-    "    FileSystemData = open(\"FileSystemData.json\", \"w\")\n",
+    "    FileSystemData = open(\"new_dir_org.json\", \"w\")\n",
     "    FileSystemData.write(fileSystem)\n",
     "    #-------------------------------END\n",
     "    \n",
